<resources>
    <string name="app_name">Savent</string>
    <string name="stringRegistrazione">Sign up</string>
    <string name="stringAccesso">Login</string>
    <string name="PasswordDimenticata">Forgot password?</string>
    <string name="accountNotActivated">Account not yet activated!</string>
    <string name="modificaProfilo">Edit</string>
    <string name="nomeUtente">Name</string>
    <string name="cognomeUtente">Surname</string>
    <string name="dataNascitaUtente">Date of birth</string>
    <string name="genereUtente">Gender</string>
    <string name="genereMaschile">Male</string>
    <string name="genereFemminile">Female</string>
    <string name="genereNonDefinito">Undefined</string>
    <string name="telefonoUtente">Phone</string>
    <string name="EmailUtente">Email</string>
    <string name="passwordUtente">Password</string>
    <string name="confermaPasswordUtente">Confirm password</string>
    <string name="passwordErrataRegister">Enter at least one uppercase, lowercase and numeric character</string>
    <string name="passwordsNotMatching">The two passwords do not match!</string>
    <string name="campiErratiRegister">There are incorrect fields</string>
    <string name="registrazioneEffettuataRegister">User registered and logged-in.</string>
    <string name="registrazioneErrore">Errors during the registration.</string>
    <string name="account">Account</string>
    <string name="phoneNumberAlreadyTaken">Phone number already used!</string>
    <string name="fiscalCodeAlreadyTaken">Fiscal code already used!</string>
    <string name="searchPlaceholder">Search here</string>
    <string name="informationUploaded">Information updated successfully!</string>
    <string name="errorUpload">Something went wrong while updating the information!</string>
    <string name="noUpdates">Nothing to update!</string>
    <string name="greenStatusText">You\'re Good</string>
    <string name="yelloStatusText">You\'re at risk</string>
    <string name="redStatusText">You\'re in Danger</string>
    <string name="TabBarHome">Home </string>
    <string name="TabBarGroups">Groups </string>
    <string name="TabBarEvents">Events </string>
    <string name="TabBarAccount">Account </string>
    <string name="statusText">Negative </string>
    <string name="Nome">Name:</string>
    <string name="Cognome">Surname:</string>
    <string name="Genere">Gender:</string>
    <string name="dataNascita">Date of birth:</string>
    <string name="email">Your email:</string>
    <string name="password">Your password:</string>
    <string name="ModificaImmagineProfilo">Edit</string>
    <string name="salvaModifiche">Save modification</string>
    <string name="cambiaCredenziali">Change your login credentials</string>
    <string name="errorLogin">Email or password incorrect!</string>
    <string name="correctLogin">Login successful!</string>
    <string name="newEvent">Create new Event</string>
    <string name="myEvents">My Events</string>
    <string name="searchEvents">Search</string>
    <string name="nearbyEvents">Nearby Events</string>
    <string name="eventPageTitle">Event</string>
    <string name="eventDescription">Description</string>
    <string name="eventLocation">Location</string>
    <plurals name="availablePlaces">
        <item quantity="one">%d place</item>
        <item quantity="other">%d places</item>
    </plurals>
    <plurals name="queuePlaces">
        <item quantity="one">%d person</item>
        <item quantity="other">%d peoples</item>
    </plurals>
    <string name="eventOwner">Created by:</string>
    <string name="joinEvent">Join the event</string>
    <string name="eventOwnerLabel">Owner</string>
    <string name="events">Events</string>
    <string name="leaveEvent">Leave event</string>
    <string name="myPartecipations">Participations</string>
    <string name="queueMessage">You are queueing up.\nAs soon as someone leaves the event,\n the queue will go up in order of booking.</string>
    <string name="participationMessage">Your participation has been accepted!</string>
    <string name="messageStatus">You are queueing up.\nYour health status does not satisfy the minimum requirements.\nYou will climb the queue as soon as you reach them!</string>
    <string name="yesValue">Yes</string>
    <string name="areUSure">Are you sure?</string>
    <string name="popUpJoinHealthOkPlacesOk">Your health status meets the requirements and there are seats available.\nAre you sure you want to attend this event?</string>
    <string name="popUpJoinHealthOkPlacesNO">Your health status meets the requirements but there are no seats available. You will be added to the queue and as soon as seats become available, the queue will scale in order of booking. You will be notified if you can attend the event.\nWould you like to proceed?</string>
    <string name="popUpJoinHealthNO">Your health status does not meet the requirements. You will be added to the queue and as soon as you meet the requirements you will receive a notification confirming your participation.\nDo you want to proceed?</string>
    <string name="participationCorrectlySent">Participation sent successfully!</string>
    <string name="errorJoiningEvent">An error occurred while submitting your event participation!</string>
    <string name="youSureLeavingEvent">Are you sure you want to leave the event?</string>
    <string name="eventAbandonedCorrectly">Event successfully abandoned!</string>
    <string name="errorAbandoningEvent">An error occurred while abandoning the event!</string>
    <string name="searchInThisArea">Search in this area</string>
    <string name="nameGroup">Group name</string>
    <string name="descrGroup">Description</string>
    <string name="adminGroup">Admin</string>
    <string name="groups">Groups</string>
    <string name="text_register_ente"> <u>Are you an institution? Click here!</u></string>
    <string name="select_ente">Select institution</string>
    <string name="freelance">Freelance</string>
    <string name="company">Company</string>
    <string name="certificato_partita_iva">VAT certificate</string>
    <string name="button_carica">Upload</string>
    <string name="numero_partita_iva">VAT number</string>
    <string name="immagine_caricata">Image uploaded!</string>
    <string name="codice_fiscale">Fiscal code</string>
    <string name="residenza">Residence</string>
    <string name="numero_albo">Registration number Albo</string>
    <string name="errorPIVA">Select a VAT certificate</string>
    <string name="errorVCamerale">Select a Chamber of commerce!</string>
    <string name="enteCreated">Institution created! As soon as the information entered is verified, the account will be activated.</string>
    <string name="visura_camerale">Chamber of commerce</string>
    <string name="domicilio_fiscale">Tax domicile</string>
    <string name="sede_azienda">Headquarters</string>
    <string name="aggiungi_contatto">Who would you like to add?</string>
    <string name="nuovoGruppo">New group</string>
    <string name="stringaContatti">Contacts:</string>
    <string name="selezionaContatti">Choose contacts</string>
    <string name="bottoneCreaGruppo">Create group</string>
    <string name="labelCreaGruppo">Create</string>
    <string name="nomeContatto">Name contact</string>
    <string name="numeroContatto">Phone number</string>
    <string name="avvisoNoContattiSelezionati">No contacts selected!</string>
    <string name="avvisoNoContatti">No contacts!</string>
    <string name="bottoneAggiungiContatti">Add contacts</string>
    <string name="add">Add</string>
    <string name="groupCreated">Group created successfully!</string>
    <string name="groupCreatedWithSomeDownloadError">Group created successfully! However, something went wrong while downloading the information.Try later!</string>
    <string name="groupCreationError">Something went wrong when creating the event!</string>
    <string name="noItemFound">No items found</string>
    <string name="addGroup">New group</string>
    <string name="groupPageTitle">Group</string>
    <string name="leaveGroup">Leave</string>
    <string name="removeUserFromTheGroup">Remove user</string>
    <string name="confirmRemoveUserFromTheGroup">Are you sure you want to delete this user?</string>
    <string name="confirmPositive">Yes</string>
    <string name="confirmNegative">No</string>
    <string name="confirmDelete">User Delete!</string>
    <string name="noConfirmDelete">User not Delete!</string>
    <string name="titleLeaveGroup">Leave group</string>
    <string name="msgLeaveGroup">Are you sure you want to leave this group?</string>
    <string name="leaveSuccess">You have successfully left the group!</string>
    <string name="leaveInSuccess">You are still part of this group!</string>
    <string name="msgYouAreAdmin">You are admin!</string>
    <string name="deleteGroup">Delete</string>
    <string name="titleDeleteGroup">Delete group</string>
    <string name="msgDeleteGroup">Are you sure you want to delete this group?</string>
    <string name="deleteSuccess">You have successfully eliminated the group!</string>
    <string name="deleteInsuccess">Deletion failed!</string>
    <string name="deleteSuccessEvent">You have successfully eliminated the event!</string>
    <string name="editGroup">Edit group</string>
    <string name="textNameGroup">Name:</string>
    <string name="editNameGroup">Name group</string>
    <string name="textDescriptionGroup">Description:</string>
    <string name="editDescriptionGroup">Description group</string>
    <string name="creazioneEvento">Create event</string>
    <string name="descirzioneEvento">Description</string>
    <string name="maxPartecipantiEvento">Maximum number of participants</string>
    <string name="statusSanitario">Health status</string>
    <string name="nomeEvento">Name</string>
    <string name="dataEvento">Date</string>
    <string name="selezionaData">Select date</string>
    <string name="oraEvento">Hours</string>
    <string name="selezionaOra">Select time</string>
    <string name="posizioneEvento">Location</string>
    <string name="pulsanteCreaEvento">Create</string>
    <string name="inserisciPosizioneEvento">Enter location</string>
    <string name="latitudineEvento">Latitude:   </string>
    <string name="longitudineEvento">Longitude:   </string>
    <string name="eventoCreato">Event created!</string>
    <string name="accountCreatoreLabel">Account creator</string>
    <string name="accountCreatore">Me</string>
    <string name="luogoEvento">Enter the place where the event will take place</string>
    <string name="messaggioDataOraEvento">Enter the data and time of the event</string>
    <string name="deleteEvent">Delete</string>
    <string name="titleDeleteEvent">Delete event</string>
    <string name="msgDeleteEvent">Are you sure you want to delete this event?</string>
    <string name="modificaEvento">Edit event</string>
    <string name="pswRecoveryText">Password Recovery</string>
    <string name="pswRecoveryButton">Send Recovery Email</string>
    <string name="pswRecoveryToast">If the entered email is on our servers, we will send you a password reset email.</string>
    <string name="changeLoginCredential">Change login credential</string>
    <string name="changeEmail">Change Email</string>
    <string name="changePassword">Change Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmNewPassword">Confirm new Password</string>
    <string name="passwordChangeSuccess">Password updated successfully!</string>
    <string name="passwordChangeError">Error updating password!</string>
    <string name="dateTimePartecipations">Date Time</string>
    <string name="partecipationEvent">Participate</string>
    <string name="queueEvent">Queue</string>
    <string name="titlePartecipation">Title</string>
    <string name="descriptionPartecipation">Description</string>
</resources>