<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistrazioniEnte.FreelanceFragment"
    android:background="@drawable/ic_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/boxHome">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewCertificatoPartitaIvaFreelance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="@dimen/margin_left_textView_register"
                    android:layout_marginTop="@dimen/margin_size"
                    android:text="@string/certificato_partita_iva"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonCertificatoPartitaIvaFreelance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/blueButton"
                    android:text="@string/button_carica"
                    android:textColor="@color/white"
                    app:cornerRadius="@dimen/radius_button_register_ente"
                    />

                <TextView
                    android:id="@+id/textViewLabelCaricamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="65dp"
                    android:text="@string/immagine_caricata"
                    android:visibility="invisible"
                    android:textColor="@color/black" />


            </LinearLayout>


            <TextView
                android:id="@+id/textViewPartitaIvaFreelance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/margin_left_textView_register"
                android:layout_marginTop="@dimen/margin_size"
                android:text="@string/numero_partita_iva"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextPartitaIvaFreelance"
                android:layout_width="@dimen/width_editText_register"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                app:backgroundTint="@color/gray"/>

            <TextView
                android:id="@+id/textViewNomeFreelance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/margin_left_textView_register"
                android:layout_marginTop="@dimen/margin_size"
                android:text="@string/nomeUtente"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextNomeFreelance"
                android:layout_width="@dimen/width_editText_register"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="true"
                app:backgroundTint="@color/gray" />

            <TextView
                android:id="@+id/textViewCognomeFreelance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/margin_left_textView_register"
                android:layout_marginTop="@dimen/margin_size"
                android:text="@string/cognomeUtente"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextCognomeFreelance"
                android:layout_width="@dimen/width_editText_register"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="true"
                app:backgroundTint="@color/gray" />

            <TextView
                android:id="@+id/textViewCodiceFiscaleFreelance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/margin_left_textView_register"
                android:layout_marginTop="@dimen/margin_size"
                android:text="@string/codice_fiscale"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextCodiceFiscaleFreelance"
                android:layout_width="@dimen/width_editText_register"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true"
                app:backgroundTint="@color/gray" />

            <TextView
                android:id="@+id/textViewResidenzaFreelance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/margin_left_textView_register"
                android:layout_marginTop="@dimen/margin_size"
                android:text="@string/residenza"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextResidenzaFreelance"
                android:layout_width="@dimen/width_editText_register"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="92 Viale Giovanni XXIII"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true"
                app:backgroundTint="@color/gray" />


            <TextView
                android:id="@+id/textViewNumeroIscrizioneAlboFreelance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/margin_left_textView_register"
                android:layout_marginTop="@dimen/margin_size"
                android:text="@string/numero_albo"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextNumeroIscrizioneAlboFreelance"
                android:layout_width="@dimen/width_editText_register"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                app:backgroundTint="@color/gray"/>

            <TextView
                android:id="@+id/textViewTelefonoFreelance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/margin_left_textView_register"
                android:layout_marginTop="@dimen/margin_size"
                android:text="@string/telefonoUtente"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTelefonoFreelance"
                android:layout_width="@dimen/width_editText_register"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                app:backgroundTint="@color/gray"/>


            <TextView
                android:id="@+id/textViewEmailFreelance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/margin_left_textView_register"
                android:layout_marginTop="@dimen/margin_size"
                android:text="@string/EmailUtente"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextEmailFreelance"
                android:layout_width="@dimen/width_editText_register"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                app:backgroundTint="@color/gray"/>

            <TextView
                android:id="@+id/textViewPasswordFreelance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/margin_left_textView_register"
                android:layout_marginTop="@dimen/margin_size"
                android:text="@string/passwordUtente"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextPasswordFreelance"
                android:layout_width="@dimen/width_editText_register"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPassword"
                android:singleLine="true"
                app:backgroundTint="@color/gray"/>

            <TextView
                android:id="@+id/textViewConfermaPasswordFreelance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/margin_left_textView_register"
                android:layout_marginTop="@dimen/margin_size"
                android:text="@string/confermaPasswordUtente"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextConfermaPasswordFreelance"
                android:layout_width="@dimen/width_editText_register"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPassword"
                android:singleLine="true"
                app:backgroundTint="@color/gray"/>

            <Button
                android:id="@+id/buttonRegistrazioneFreelance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_size"
                android:layout_marginLeft="@dimen/margin_size"
                android:layout_marginRight="@dimen/margin_size"
                android:layout_marginBottom="25dp"
                android:backgroundTint="@color/blueButton"
                android:text="@string/stringRegistrazione"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/radius_button_register" />

        </LinearLayout>

    </ScrollView>


</FrameLayout>