<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/pswRecoveryText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewEmailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="120dp"
        android:text="@string/EmailUtente"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailLogin"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/recoveryPswEmail"
        android:layout_width="@dimen/width_editText_register"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        app:backgroundTint="@color/gray" />

    <Button
        android:id="@+id/buttonAccediLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blueButton"
        android:gravity="center"
        android:text="@string/pswRecoveryButton"
        android:textColor="@color/white"
        android:onClick="onClickSendRecoveryEmail"
        app:cornerRadius="@dimen/radius_button_login" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="35dp" />

</LinearLayout>